新增一些注释,增加管理员快速查询

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
     <welcome-file>user.html</welcome-file>
   </welcome-file-list>
   <display-name>test</display-name>
+<!--  拦截用户请求index.html-->
   <filter>
     <filter-name>IsLoginFilter</filter-name>
     <filter-class>com.bb.test.IsLoginFilter</filter-class>
@@ -15,27 +16,28 @@
     <filter-name>IsLoginFilter</filter-name>
     <url-pattern>/index.html</url-pattern>
   </filter-mapping>
-
-  <servlet>
-    <servlet-name>MyServlet</servlet-name>
-    <servlet-class>com.bb.test.SearchServlet</servlet-class>
-  </servlet>
+<!--  登录-->
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>com.bb.test.LoginServlet</servlet-class>
   </servlet>
   <servlet>
+<!--  用户查询-->
     <servlet-name>SearchServlet</servlet-name>
     <servlet-class>com.bb.test.SearchServlet</servlet-class>
   </servlet>
   <servlet>
+<!--    管理员添加-->
     <servlet-name>AddServlet</servlet-name>
     <servlet-class>com.bb.test.AddServlet</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>MyServlet</servlet-name>
-    <url-pattern>/MyServlet</url-pattern>
-  </servlet-mapping>
+  <servlet>
+<!--    管理员快捷查询-->
+    <servlet-name>QuickSearchServlet</servlet-name>
+    <servlet-class>com.bb.test.QuickSearchServlet</servlet-class>
+  </servlet>
+
+
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/LoginServlet</url-pattern>
@@ -47,6 +49,10 @@
   <servlet-mapping>
     <servlet-name>AddServlet</servlet-name>
     <url-pattern>/AddServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>QuickSearchServlet</servlet-name>
+    <url-pattern>/QuickSearchServlet</url-pattern>
   </servlet-mapping>
 
 </web-app>
